--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Preconnect for Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Mayokun Areola" />
+    <meta property="og:description" content="Portfolio website of Mayokun Areola, showcasing projects, skills, and contact information." />
+    <meta property="og:image" content="/logo.svg" />
+    <meta property="og:url" content="https://mayokun-areola.vercel.app" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Mayokun Areola Portfolio" />
+
+    <!-- Twitter Card (Optional) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Mayokun Areola">
+    <meta name="twitter:description" content="Portfolio website of Mayokun Areola, showcasing projects, skills, and contact information.">
+    <meta name="twitter:image" content="/profile.png">
+
     <title>Mayokun Areola</title>
   </head>
   <body>
