--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Mayokun Areola Portfolio" />
 
-    <!-- Twitter Card (Optional) -->
+    <!-- Twitter Card  -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Mayokun Areola">
     <meta name="twitter:description" content="Portfolio website of Mayokun Areola, showcasing projects, skills, and contact information.">
