--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Mayokun Areola" />
     <meta property="og:description" content="Portfolio website of Mayokun Areola, showcasing projects, skills, and contact information." />
-    <meta property="og:image" content="/logo.svg" />
+    <meta property="og:image" content="/profile.png" />
     <meta property="og:url" content="https://mayokun-areola.vercel.app" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Mayokun Areola Portfolio" />
