--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
+    <meta name="google-site-verification" content="gQhhHlhPXvKYquPJ3kOq8A5M5B0hAEOUGJ_sC87UJH8" />
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Mayokun Areola" />
     <meta property="og:description" content="Portfolio website of Mayokun Areola, showcasing projects, skills, and contact information." />
